<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelSelectionActivity" >

    <TextView
        android:id="@+id/txt_lvlSelectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_lvlSelectTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_lvl1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_lvlSelectTitle"
        android:layout_marginTop="18dp"
        android:gravity="top|left"
        android:text="@string/btn_lvl1"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_lvl2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_lvl1"
        android:gravity="top|left"
        android:text="@string/btn_lvl2"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_lvl3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_lvl2"
        android:gravity="top|left"
        android:text="@string/btn_lvl3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_lvlState1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_lvl1"
        android:layout_alignRight="@+id/btn_lvl1"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="33dp"
        android:text="@string/btn_lvlStateUnlocked" />

    <TextView
        android:id="@+id/btn_lvlState2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_lvl2"
        android:layout_alignRight="@+id/btn_lvl2"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="33dp"
        android:text="@string/btn_lvlStateLocked" />

    <TextView
        android:id="@+id/btn_lvlState3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_lvl3"
        android:layout_alignRight="@+id/btn_lvl3"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="33dp"
        android:text="@string/btn_lvlStateLocked" />

    <TextView
        android:id="@+id/btn_lvlStatus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_lvlState1"
        android:layout_alignRight="@+id/btn_lvl1"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="33dp"
        android:text="0/15"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/btn_lvlStatus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_lvlState2"
        android:layout_alignRight="@+id/btn_lvl2"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="33dp"
        android:text="0/15"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/btn_lvlStatus3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_lvlState3"
        android:layout_alignRight="@+id/btn_lvl3"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="33dp"
        android:text="0/15"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
